--- a/kernel/kernel-api/pom.xml
+++ b/kernel/kernel-api/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>kernel-api</artifactId>
+  <dependencies>
+      <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>4.2.2</version>
+      </dependency>
+  </dependencies>
 </project>
