--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -1,10 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.dinstone.maa</groupId>
-    <artifactId>maa-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>kernel</artifactId>
-  <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dinstone.maa</groupId>
+        <artifactId>maa-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <artifactId>kernel</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>kernel-api</module>
+        <module>kernel-system</module>
+    </modules>
 </project>
