--- a/module-a/module-a-spi/pom.xml
+++ b/module-a/module-a-spi/pom.xml
@@ -6,4 +6,16 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>module-a-spi</artifactId>
+  <dependencies>
+      <dependency>
+          <groupId>com.dinstone.maa</groupId>
+          <artifactId>module-a-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>com.dinstone.maa</groupId>
+          <artifactId>module-b-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+  </dependencies>
 </project>
